# ncaanext-textures-downloader-v2

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
frontend/: App.tsx  config.ts  styles.css
frontend/components/: AppOutdatedModal.tsx  DirectoryPicker.tsx  ExistingFolderDialog.tsx  FetchErrorModal.tsx  Header.tsx  InstallButton.tsx  ProgressDisplay.tsx  SyncTab.tsx  SyncWarningDialog.tsx
src/: README.txt  download_textures.bat  download_textures.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/mingit/arm64/clangarm64/lib/: libc++.modules.json
src-tauri/mingit/arm64/clangarm64/share/libc++/v1/: std.compat.cppm  std.cppm
src-tauri/mingit/arm64/etc/: gitconfig  libexec-moved.txt
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/commands/: app_info.rs  filesystem.rs  install.rs  mod.rs  sync.rs
src/mingit/arm64/clangarm64/libexec/git-core/: git-sh-i18n
src/mingit/arm64/etc/: bash.bashrc  package-versions.txt
