[package]
name = "ps2-textures-downloader"
version = "0.1.0"
description = "PS2 Textures Downloader V2 - Download and manage PS2 texture packs"
authors = ["NCAA Next"]
edition = "2021"

[lib]
name = "ps2_textures_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util"] }
chrono = "0.4"
regex = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Power"] }

