[package]
name = "ncaanext-textures-downloader"
version = "2.0.0"
description = "NCAA NEXT Textures Downloader - Download and sync NCAA NEXT texture packs"
authors = ["NCAA NEXT"]
edition = "2021"

[lib]
name = "ps2_textures_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "fs"] }
chrono = "0.4"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
sha1 = "0.10"
hex = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Power"] }
conpty = "0.5"

